# texscrap

./: README.md  pyproject.toml
texscrap/: __init__.py
