[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "texscrap"
version = "0.1"
description = "Runs pdflatex on a LaTeX file that lacks a header and returns a tightly cropped PDF, and optionally, a PNG file. Can also run on a quoted LaTeX equation."
authors = [
    { name = "John Joseph Horton", email = "john.joseph.horton@gmail.com" }
]
license = { text = "GPL v3" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "Jinja2>=2.6"
]

[project.urls]
Homepage = "http://github.com/johnjosephhorton/texscrap"

[project.scripts]
texscrap = "texscrap:main"

[tool.setuptools]
packages = ["texscrap"]

[tool.setuptools.package-data]
texscrap = ["templates/*.tex"]
